--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -204,14 +204,18 @@ h6 {
   overflow: hidden;
 }
 
-.navmenu ul {
+.navmenu ul::first-line {
   display: block;
-  list-style: none;
+  list-style-type: circle;
   padding: 10px 0;
   margin: 0;
   overflow-y: auto;
-  transition: 0.3s;
+  transition: 0.2s;
   z-index: 998;
+}
+
+.navmenu ul ol{
+  list-style-type: none;
 }
 
 .navmenu a,
@@ -219,10 +223,10 @@ h6 {
   color: var(--nav-dropdown-color);
   padding: 10px 20px;
   font-family: var(--nav-font);
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 100;
-  display: flex;
-  align-items: center;
+  display:block;
+  align-items:normal;
   justify-content: space-between;
   white-space: nowrap;
   transition: 0.2s;
@@ -1081,6 +1085,10 @@ section .hero {
   .resume .resume-navigation {
     padding: 0;
   }
+}
+
+.resume ol {
+  list-style-type: decimal;
 }
 
 .resume .resume-navigation .nav-item .nav-link {
